<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fusion_localization</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="liangliang.gl@alibaba-inc.com">dog</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>eigen</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend> <!-- For PCL support -->
  <depend>pcl_conversions</depend> <!-- For PCL support -->
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
